[package]
name = "honeycomb-client"
version = "0.2.3"
edition = "2021"
authors = ["Jeremy Blythe <jeremyblythe@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
indicatif = "0.17.9"
openssl = { version = "0.10.68", features = ["vendored"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
